# Neuro-SAM

./: .gitattributes  .gitignore  DeepD3_Benchmark.tif  README.md  dendrite_mask.tif  environment.yml  main.py  neuro_sam_plugin.py  pyproject.toml
LaTeX/: isthesis.cls  library.bib  main.tex
LaTeX/appendices/: appendix.tex
LaTeX/config/: acronyms.tex
LaTeX/sections/: 01_Introduction.tex  01_TemplateFeatures.tex  02_BackgroundRelatedWork.tex  03_Methodologies.tex  04_Results.tex  05_Discussion.tex  06_Conclusion.tex
Train-SAMv2/: .gitignore  pyproject.toml  train.sbatch  train_dendrites.py  train_spines.py
Train-SAMv2/checkpoints/: download_ckpts.sh
Train-SAMv2/results/samv2_dendrite/: dendrite_model.torch
Train-SAMv2/results/samv2_spines/: spine_model.torch
Train-SAMv2/sam2/: sam2.1_hiera_s.yaml
Train-SAMv2/utils/: __init__.py  prompt_generation_dendrites.py  prompt_generation_spines.py  stream_dendrites.py  stream_spines.py
brightest_path_lib/: connected_componen.py
brightest_path_lib/algorithm/: waypointastar_speedup.py
brightest_path_lib/visualization/: tube_data.py
napari_utils/: main_widget.py  path_tracing_module.py  punet_widget.py  segmentation_model.py  segmentation_module.py  spine_detection_module.py  spine_segmentation_model.py  spine_segmentation_module.py
punet/: prob_unet_deepd3.py  punet_inference.py  utils.py
src/neuro_sam/: __init__.py  napari.yaml  plugin.py  utils.py
src/neuro_sam/brightest_path_lib/: __init__.py
src/neuro_sam/brightest_path_lib/algorithm/: __init__.py  astar.py  waypointastar.py  waypointastar_speedup.py
src/neuro_sam/brightest_path_lib/cost/: reciprocal.py  reciprocal_transonic.py
src/neuro_sam/brightest_path_lib/heuristic/: euclidean.py
src/neuro_sam/brightest_path_lib/visualization/: flythrough.py  flythrough_all.py  tube_data.py  tube_flythrough.py
src/neuro_sam/napari_utils/: main_widget.py  path_tracing_module.py  punet_widget.py  segmentation_model.py  segmentation_module.py  visualization_module.py
src/neuro_sam/punet/: deepd3_model.py  prob_unet_deepd3.py  prob_unet_with_tversky.py  punet_best.pth  punet_best_old.pth  punet_inference.py  run_inference.py  unet_blocks.py
src/neuro_sam/punet/inference_results/: mask_dendrite_prior_S24_T1.40_size40_thr0.50.tif  mask_spine_prior_S24_T1.40_size40_thr0.50.tif  prob_dendrite.tif  prob_spine.tif
src/neuro_sam/training/: __init__.py  train_dendrites.py
src/neuro_sam/training/utils/: __init__.py  prompt_generation_dendrites.py  stream_dendrites.py
src/sam2/: sam2_hiera_s.yaml  sam2_image_predictor.py
src/sam2/configs/: train.yaml
