[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-sam"
version = "0.1.0"
description = "Neuro-SAM: Foundation Models for Dendrite and Dendritic Spine Segmentation"
readme = "README.md"
authors = [
  { name = "Nipun Arora", email = "nipun.arora@fau.de" },
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: napari",
]
dependencies = [
    "napari",
    "numpy",
    "scipy",
    "imageio",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
    "tqdm>=4.66.1",
    "vispy",
    "qtpy",
    "superqt",
    "magicgui",
    "scikit-image",
    "tifffile"
]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/nipunarora8/Neuro-SAM"
"Bug Tracker" = "https://github.com/nipunarora8/Neuro-SAM/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["neuro_sam*", "sam2*"]

[tool.setuptools.package-data]
"sam2" = ["*.yaml", "configs/**/*.yaml"]
"neuro_sam" = ["napari.yaml"]

[project.entry-points."napari.manifest"]
neuro-sam = "neuro_sam:napari.yaml"

[tool.uv]
package = true
