[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-2"
version = "1.0"
description = "SAM 2: Segment Anything in Images and Videos"
dependencies = [
    "torch>=2.3.1",
    "torchvision>=0.18.1",
    "numpy>=1.24.4",
    "tqdm>=4.66.1",
    "hydra-core>=1.3.2",
    "iopath>=0.1.10",
    "pillow>=9.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sam2*"]
